# Forge-Fitness

./: .dockerignore  Dockerfile  README.md
src/: README.md  pyproject.toml
src/project/: manage.py
src/project/application/: urls.py
src/project/application/admin/: __init__.py  equipment_admin.py  muscle_admin.py
src/project/application/api/: __init__.py  api_routine.py
src/project/application/enums/: genders.py  impact_options.py  routine_options.py  unit_options.py
src/project/application/forms/: account_creation.py  routine_form.py
src/project/application/migrations/: 0001_initial.py  0002_equipment.py  0003_muscle_alter_equipment_options.py  0004_exerciseroutine_routinetargetmuscle_routinetag_and_more.py  0005_routineequipment.py  0006_alter_routineequipment_equipment_and_more.py  0007_rename_estimated_time_exerciseroutine_estimated_duration_and_more.py  0008_alter_exercise_uuid_alter_exerciseroutine_uuid_and_more.py
src/project/application/models/: __init__.py  equipment.py  exercise_routine.py  muscles.py  user_preferences.py
src/project/application/templates/application/: base.html  login.html  (+8 more)
src/project/application/utils/: form_messages.py  json_response.py  login_user.py
src/project/application/views/: __init__.py  create_account.py  create_routine.py  index.py  login.py  logout.py  my_routines.py  run_routine.py  update_routine.py
src/project/forge_fitness/: asgi.py  settings.py  urls.py  wsgi.py
src/project/tests/test_forms/: test_account_creation.py
src/project/tests/test_views/: test_create_account_view.py  test_create_routine.py
(+20 files in other folders)
